Updated object detection title

--- a/html/team-3-d3-5.html
+++ b/html/team-3-d3-5.html
@@ -3,7 +3,7 @@
   <head>
     <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.min.css"/>
-    <title>Recognize Entities by Location</title>
+    <title>Objects Detected by Location</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -44,7 +44,7 @@
         }
     </style>
     <div> 
-      <p class="title"> Entities recognized in generated captions <br/> by state in which sighting occurred </p>
+      <p class="title"> Objects detected in generated images <br/> by state in which sighting occurred </p>
     </div>
     <div class="divider"></div>
     <script type="text/javascript" src="https://d3js.org/d3.v7.min.js"></script>
