--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
                             <div class="caption">
-                                <h3 style="text-align:center;">Objects Detected by Location</h3>
+                                <h3 style="text-align:center;">Objects Detected by Sighting Location</h3>
                                 <p></p>
                                 <p><a href="./html/team-3-d3-5.html" class="btn btn-primary" role="button">
                                     <img src="./images/zoomable.png" style="height: auto;width: auto;">
